--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "prestart": "zero prestart",
     "build": "zero build",
     "lint": "zero lint",
+    "dev": "zero test",
     "test": "zero test",
     "format": "zero format",
     "validate": "zero validate",
@@ -22,7 +23,14 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "@helpscout/zero": "3.1.1"
+    "@helpscout/zero": "3.1.1",
+    "@types/enzyme": "3.9.0",
+    "@types/jest": "24.0.11",
+    "@types/react": "16.8.4",
+    "enzyme": "3.9.0",
+    "enzyme-adapter-react-16": "1.10.0",
+    "react": "16.8.6",
+    "react-dom": "16.8.6"
   },
   "publishConfig": {
     "access": "public"
