--- a/package.json
+++ b/package.json
@@ -56,5 +56,12 @@
   },
   "publishConfig": {
     "access": "public"
+  },
+  "dependencies": {
+    "@types/redux-logger": "3.0.7",
+    "react-redux": "5.0.7",
+    "redux": "4.0.1",
+    "redux-logger": "3.0.6",
+    "redux-thunk": "2.3.0"
   }
 }
