--- a/package.json
+++ b/package.json
@@ -58,8 +58,13 @@
     "access": "public"
   },
   "dependencies": {
+    "@helpscout/react-utils": "2.3.0",
+    "@types/react-router": "4.4.5",
+    "@types/react-router-dom": "4.3.1",
     "@types/redux-logger": "3.0.7",
     "react-redux": "5.0.7",
+    "react-router": "4.3.1",
+    "react-router-dom": "4.3.1",
     "redux": "4.0.1",
     "redux-logger": "3.0.6",
     "redux-thunk": "2.3.0"
