--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@types/react-router": "4.4.5",
     "@types/react-router-dom": "4.3.1",
     "@types/redux-logger": "3.0.7",
+    "dash-get": "1.0.2",
     "react-redux": "5.0.7",
     "react-router": "4.3.1",
     "react-router-dom": "4.3.1",
